# papildoma

./: CMakeLists.txt  Mylib.h  README.md  egzaminouzd.cbp  egzaminouzd.depend  functions.cpp  main.cpp  outputas.txt  tekstas.txt
include/: Mylib.h
src/: functions.cpp  main.cpp
